--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
+
 #calculator {
 	position: relative;
 	margin: auto;
@@ -39,18 +40,24 @@ button {
 	box-shadow: 2px 2px black;
 	border-radius: 5%;
 }
-p
-{
+
+p {
 	position: relative;
 	margin: auto;
 	top: 15%;
-	right:1%;
+	right: 1%;
 	text-align: right;
 	font-size: 2.5em;
 	font-family: 'Orbitron', sans-serif;
+	overflow: hidden;
 }
-#temporary{
+
+#temporary {
 	margin: auto;
 	font-size: 1em;
 
+}
+
+button:hover {
+	background-color: white;
 }
