--- a/style.css
+++ b/style.css
@@ -44,18 +44,11 @@ button {
 p {
 	position: relative;
 	margin: auto;
-	top: 15%;
 	right: 1%;
 	text-align: right;
 	font-size: 2.5em;
 	font-family: 'Orbitron', sans-serif;
 	overflow: hidden;
-}
-
-#temporary {
-	margin: auto;
-	font-size: 1em;
-
 }
 
 button:hover {
@@ -64,4 +57,7 @@ button:hover {
 .help {
 	background-color: cornflowerblue;
 	border: blue;
+}
+#top{
+	font-size: 1.9em
 }
